feat() add some features

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>kz.greetgo</groupId>
+			<artifactId>greetgo.fstorage</artifactId>
+			<version>2.2.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
